fixed not showing - temp

--- a/homerseklet/style.css
+++ b/homerseklet/style.css
@@ -135,5 +135,5 @@ p{
   color:white;
 }
 .temp{
-  max-width: 15%
+  max-width: 17%
 }
